--- a/HelloWordWeb/src/config/log4j.properties
+++ b/HelloWordWeb/src/config/log4j.properties
@@ -7,11 +7,10 @@ log4j.appender.console.layout.ConversionPattern=%m%n
  
  
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.file.File=${user.home}/logs/book.log
+log4j.appender.file.File=logs/book.log
 log4j.appender.file.DatePattern='_'yyyyMMDD
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d{HH:mm:ss,SSS} %p %c (%L) -
-%m%n
+log4j.appender.file.layout.ConversionPattern=%d{HH:mm:ss,SSS} %p %c (%L) - %m%n
  
  
 log4j.logger.org.jack=DEBUG
