--- a/HelloWord/.classpath
+++ b/HelloWord/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="lib/commons-email-1.3.jar" sourcepath="C:/Users/Administrator/.m2/repository/org/apache/commons/commons-email/1.3/commons-email-1.3-sources.jar"/>
 	<classpathentry kind="lib" path="lib/protobuf-java-3.5.1.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="lib/tools.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
