--- a/HelloWord/.classpath
+++ b/HelloWord/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="lib" path="lib/protobuf-java-3.5.1.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.11.jar"/>
 	<classpathentry kind="lib" path="lib/tools.jar"/>
+	<classpathentry kind="lib" path="lib/json-20140107.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
