--- a/HelloWord/.classpath
+++ b/HelloWord/.classpath
@@ -12,5 +12,16 @@
 	<classpathentry kind="lib" path="lib/junit-4.11.jar"/>
 	<classpathentry kind="lib" path="lib/tools.jar"/>
 	<classpathentry kind="lib" path="lib/json-20140107.jar"/>
+	<classpathentry kind="lib" path="lib/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections4-4.1.jar"/>
+	<classpathentry kind="lib" path="lib/curvesapi-1.03.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/jxl-2.6.10.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.14.jar"/>
+	<classpathentry kind="lib" path="lib/poi-3.16.jar" sourcepath="C:/Users/Administrator/.m2/repository/org/apache/poi/poi/3.16/poi-3.16-sources.jar"/>
+	<classpathentry kind="lib" path="lib/poi-ooxml-3.14.jar"/>
+	<classpathentry kind="lib" path="lib/poi-ooxml-schemas-3.14.jar"/>
+	<classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/xmlbeans-2.6.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
