--- a/HelloWord/.classpath
+++ b/HelloWord/.classpath
@@ -19,9 +19,10 @@
 	<classpathentry kind="lib" path="lib/jxl-2.6.10.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.14.jar"/>
 	<classpathentry kind="lib" path="lib/poi-3.16.jar" sourcepath="C:/Users/Administrator/.m2/repository/org/apache/poi/poi/3.16/poi-3.16-sources.jar"/>
-	<classpathentry kind="lib" path="lib/poi-ooxml-3.14.jar"/>
-	<classpathentry kind="lib" path="lib/poi-ooxml-schemas-3.14.jar"/>
 	<classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/xmlbeans-2.6.0.jar"/>
+	<classpathentry kind="lib" path="lib/poi-ooxml-3.16.jar" sourcepath="C:/Users/Administrator/.m2/repository/org/apache/poi/poi-ooxml/3.16/poi-ooxml-3.16-sources.jar"/>
+	<classpathentry kind="lib" path="lib/poi-ooxml-schemas-3.16.jar"/>
+	<classpathentry kind="lib" path="lib/jedis-2.8.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
